--- a/index_es.html
+++ b/index_es.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Paula & Austin | Boda</title>
-  <link 
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400&display=swap" 
-    rel="stylesheet"/>
-  <link rel="stylesheet" href="style.css"/>
+  <title>Paula &amp; Austin | Boda</title>
+
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400&display=swap"
+    rel="stylesheet"
+  />
+
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body id="top">
 
-  <!-- Header with Navigation, Language Switch, and Hamburger -->
-  <header>
-    <div class="logo"><a href="#top">P &amp; A</a></div>
-    <div class="hamburger" id="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <nav id="nav-menu">
-      <a href="#location">Ubicación</a>
-      <a href="#schedule">Programa</a>
-      <a href="#transport">Cómo Llegar</a>
-      <a href="#accommodations">Alojamiento</a>
-      <a href="#faqs">Preguntas</a>
-      <a href="#rsvp">RSVP</a>
-      <a href="#party">Cortejo</a>
-      <div class="lang-switch"><a href="index.html">EN</a></div>
-    </nav>
-  </header>
+  <!-- Header & Navbar -->
+  <div class="topnav" id="myTopnav">
+    <!-- Logo -->
+    <a href="#top" class="logo">P &amp; A</a>
+    <!-- Nav links -->
+    <a href="#location">Ubicación</a>
+    <a href="#schedule">Programa</a>
+    <a href="#transport">Cómo Llegar</a>
+    <a href="#accommodations">Alojamiento</a>
+    <a href="#faqs">Preguntas</a>
+    <a href="#rsvp">RSVP</a>
+    <a href="#party">Cortejo</a>
+    <!-- Language switch -->
+    <div class="lang-switch"><a href="index.html">EN</a></div>
+    <!-- Hamburger icon -->
+    <a href="javascript:void(0);" class="icon" onclick="toggleNav()">&#9776;</a>
+  </div>
 
-  <!-- Hero Section (No Tint Overlay) -->
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content">
       <h1>Paula &amp; Austin</h1>
@@ -45,17 +48,15 @@
       <h2>Ubicación</h2>
       <p>Acompáñanos en nuestro hermoso lugar en Barcelona.</p>
       <div class="map-wrapper">
-        <!-- Placeholder 14th century style map image -->
-        <img src="images/map-placeholder.png" alt="Mapa de la época del siglo XIV (placeholder)" />
+        <img src="images/map-placeholder.png" alt="Mapa del siglo XIV (placeholder)" />
       </div>
     </div>
   </section>
 
-  <!-- Schedule Section (Now Displaying a Single PNG Image) -->
+  <!-- Schedule Section -->
   <section id="schedule" class="section">
     <div class="container">
       <h2>Programa</h2>
-      <!-- Replace "images/schedule.png" with actual schedule image -->
       <img src="images/schedule.png" alt="Programa de la boda" class="schedule-img" />
     </div>
   </section>
@@ -64,7 +65,7 @@
   <section id="transport" class="section">
     <div class="container">
       <h2>C&#243;mo Llegar</h2>
-      <p>Recomendamos tomar taxis o servicios de viaje compartido desde el centro hasta el lugar. También hay autobuses lanzadera saliendo de Park Güell a las 16:00. Si conduces, hay estacionamiento gratuito en el lugar.</p>
+      <p>Recomendamos tomar taxis o servicios de viaje compartido desde el centro hasta el lugar. También hay autobuses lanzadera desde Park Güell a las 16:00 h. Si conduces, hay estacionamiento gratuito en el lugar.</p>
     </div>
   </section>
 
@@ -77,7 +78,7 @@
         <li><strong>W Barcelona:</strong> Hotel icónico con forma de vela, 4 km del lugar.</li>
         <li><strong>Hotel 1898:</strong> Hotel histórico en La Rambla, 5 km del lugar.</li>
       </ul>
-      <p>Usa el código <em>PAULA-AUSTIN</em> para un 10% de descuento en cualquiera de estos hoteles.</p>
+      <p>Usa el código <em>PAULA-AUSTIN</em> para un 10 % de descuento en cualquiera de estos alojamientos.</p>
     </div>
   </section>
 
@@ -89,7 +90,7 @@
         <li><strong>Código de Vestimenta:</strong> Cocktail. Espera clima cálido—se recomiendan telas ligeras.</li>
         <li><strong>Restricciones Alimentarias:</strong> Por favor indícanos en el formulario RSVP si tienes alguna alergia.</li>
         <li><strong>Niños:</strong> Evento solo para adultos, por favor.</li>
-        <li><strong>Clima:</strong> La ceremonia será al aire libre. En caso de lluvia, tenemos un lugar interior de respaldo.</li>
+        <li><strong>Clima:</strong> La ceremonia será al aire libre. En caso de lluvia, tenemos un espacio interior de respaldo.</li>
       </ul>
     </div>
   </section>
@@ -99,12 +100,7 @@
     <div class="container">
       <h2>RSVP</h2>
       <p>Por favor confirma tu asistencia antes del 1 de Agosto de 2025.</p>
-      <!-- Enlace a Google Form -->
-      <a 
-        class="rsvp-button" 
-        href="https://forms.gle/your-google-form-link-here" 
-        target="_blank" 
-        rel="noopener">
+      <a class="rsvp-button" href="https://forms.gle/your-google-form-link-here" target="_blank" rel="noopener">
         RSVP Aquí
       </a>
     </div>
@@ -115,48 +111,35 @@
     <div class="container">
       <h2>Cortejo</h2>
       <div class="party-grid">
-        <!-- Cortejo de la Novia -->
+        <!-- Cortejo de la novia -->
         <div class="party-column">
           <h3>Damas de Honor</h3>
           <div class="party-item">
-            <img 
-              src="https://source.unsplash.com/400x400?bridesmaid" 
-              alt="Maria Gonzalez" />
+            <img src="https://source.unsplash.com/400x400?bridesmaid" alt="Maria Gonzalez" />
             <p>Maria Gonzalez (Dama de Honor)</p>
           </div>
           <div class="party-item">
-            <img 
-              src="https://source.unsplash.com/400x400?bridesmaid,portrait" 
-              alt="Elena Ruiz" />
+            <img src="https://source.unsplash.com/400x400?bridesmaid,portrait" alt="Elena Ruiz" />
             <p>Elena Ruiz (Dama de Honor)</p>
           </div>
           <div class="party-item">
-            <img 
-              src="https://source.unsplash.com/400x400?bridesmaid,portrait" 
-              alt="Carla Fernandez" />
+            <img src="https://source.unsplash.com/400x400?bridesmaid,portrait" alt="Carla Fernandez" />
             <p>Carla Fernandez (Dama de Honor)</p>
           </div>
         </div>
-
-        <!-- Cortejo del Novio -->
+        <!-- Cortejo del novio -->
         <div class="party-column">
           <h3>Padrinos</h3>
           <div class="party-item">
-            <img 
-              src="https://source.unsplash.com/400x400?groomsman" 
-              alt="John Smith" />
+            <img src="https://source.unsplash.com/400x400?groomsman" alt="John Smith" />
             <p>John Smith (Padrino)</p>
           </div>
           <div class="party-item">
-            <img 
-              src="https://source.unsplash.com/400x400?groomsman,portrait" 
-              alt="Michael Lee" />
+            <img src="https://source.unsplash.com/400x400?groomsman,portrait" alt="Michael Lee" />
             <p>Michael Lee (Padrino)</p>
           </div>
           <div class="party-item">
-            <img 
-              src="https://source.unsplash.com/400x400?groomsman,portrait" 
-              alt="David Brown" />
+            <img src="https://source.unsplash.com/400x400?groomsman,portrait" alt="David Brown" />
             <p>David Brown (Padrino)</p>
           </div>
         </div>
@@ -171,14 +154,16 @@
     </div>
   </footer>
 
-  <!-- JavaScript for Hamburger Toggle -->
+  <!-- JavaScript to toggle nav -->
   <script>
-    const hamburger = document.getElementById('hamburger');
-    const navMenu = document.getElementById('nav-menu');
-    hamburger.addEventListener('click', () => {
-      navMenu.classList.toggle('active');
-    });
+    function toggleNav() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
   </script>
-
 </body>
 </html>
