--- a/index_es.html
+++ b/index_es.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Paula &amp; Austin | Boda</title>
-
-  <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400&display=swap"
-    rel="stylesheet"
-  />
-
-  <!-- Main CSS -->
-  <link rel="stylesheet" href="style.css" />
+    rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body id="top">
 
-  <!-- Header & Navbar -->
   <div class="topnav" id="myTopnav">
-    <!-- Logo -->
     <a href="#top" class="logo">P &amp; A</a>
-    <!-- Nav links -->
     <a href="#location">Ubicación</a>
     <a href="#schedule">Programa</a>
     <a href="#transport">Cómo Llegar</a>
@@ -28,13 +20,10 @@
     <a href="#faqs">Preguntas</a>
     <a href="#rsvp">RSVP</a>
     <a href="#party">Cortejo</a>
-    <!-- Language switch -->
     <div class="lang-switch"><a href="index.html">EN</a></div>
-    <!-- Hamburger icon -->
     <a href="javascript:void(0);" class="icon" onclick="toggleNav()">&#9776;</a>
   </div>
 
-  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content">
       <h1>Paula &amp; Austin</h1>
@@ -42,67 +31,60 @@
     </div>
   </section>
 
-  <!-- Location Section -->
   <section id="location" class="section map">
     <div class="container">
       <h2>Ubicación</h2>
-      <p>Acompáñanos en nuestro hermoso lugar en Barcelona.</p>
-      <div class="map-wrapper">
-        <img src="images/map-placeholder.png" alt="Mapa del siglo XIV (placeholder)" />
-      </div>
+      <p>Acompáñanos en nuestro hermoso lugar en Tielmes.</p>
+      <p>Celebramos en la "Casa Rural Vega de Tielmes"</p>
+      <p>Calle de Cercado, 28550, Tielmes, Madrid</p>
+      <p>Es la primera casa a la izquierda al pie de la colina. No te la puedes perder.</p>
+      <p><a class="map-link" href="https://g.co/kgs/UA6YHBm" target="_blank" rel="noopener">Encuéntralo en Google Maps</a></p>
     </div>
   </section>
 
-  <!-- Schedule Section -->
   <section id="schedule" class="section">
     <div class="container">
       <h2>Programa</h2>
-      <img src="images/schedule.png" alt="Programa de la boda" class="schedule-img" />
+      <img src="images/schedule_es.png" alt="Programa de la boda" class="schedule-img"/>
     </div>
   </section>
 
-  <!-- Transport Section -->
   <section id="transport" class="section">
     <div class="container">
       <h2>C&#243;mo Llegar</h2>
-      <p>Recomendamos tomar taxis o servicios de viaje compartido desde el centro hasta el lugar. También hay autobuses lanzadera desde Park Güell a las 16:00 h. Si conduces, hay estacionamiento gratuito en el lugar.</p>
+      <p>Recomendamos tomar taxis o servicios de viaje compartido desde el centro hasta el lugar. Hay autobuses lanzadera desde la estación de Tielmes a las 16:00 h. Si conduces, hay estacionamiento gratuito en el lugar.</p>
     </div>
   </section>
 
-  <!-- Accommodations Section -->
   <section id="accommodations" class="section">
     <div class="container">
       <h2>Alojamiento</h2>
       <ul>
-        <li><strong>Hotel Arts Barcelona:</strong> Lujo frente a la playa, 3 km del lugar.</li>
-        <li><strong>W Barcelona:</strong> Hotel icónico con forma de vela, 4 km del lugar.</li>
-        <li><strong>Hotel 1898:</strong> Hotel histórico en La Rambla, 5 km del lugar.</li>
+        <li><strong>Hotel Rural Vega:</strong> Encantadora posada adyacente al lugar.</li>
+        <li><strong>Posada La Venta:</strong> Posada histórica en el centro de Tielmes.</li>
+        <li><strong>Hostal Madrid:</strong> Motel económico en la localidad cercana.</li>
       </ul>
-      <p>Usa el código <em>PAULA-AUSTIN</em> para un 10 % de descuento en cualquiera de estos alojamientos.</p>
+      <p>Usa el código <em>PAULA-AUSTIN</em> para un 10% de descuento en cualquiera de estos alojamientos.</p>
     </div>
   </section>
 
-  <!-- FAQs Section -->
   <section id="faqs" class="section">
     <div class="container">
       <h2>Preguntas Frecuentes</h2>
       <ul>
         <li><strong>Código de Vestimenta:</strong> Cocktail. Espera clima cálido—se recomiendan telas ligeras.</li>
-        <li><strong>Restricciones Alimentarias:</strong> Por favor indícanos en el formulario RSVP si tienes alguna alergia.</li>
+        <li><strong>Restricciones Alimentarias:</strong> Indícanos en el formulario RSVP si tienes alguna alergia.</li>
         <li><strong>Niños:</strong> Evento solo para adultos, por favor.</li>
-        <li><strong>Clima:</strong> La ceremonia será al aire libre. En caso de lluvia, tenemos un espacio interior de respaldo.</li>
+        <li><strong>Clima:</strong> Ceremonia al aire libre. En caso de lluvia, hay espacio interior de respaldo.</li>
       </ul>
     </div>
   </section>
 
-  <!-- RSVP Section -->
   <section id="rsvp" class="section">
     <div class="container">
       <h2>RSVP</h2>
-      <p>Por favor confirma tu asistencia antes del 1 de Agosto de 2025.</p>
-      <a class="rsvp-button" href="https://forms.gle/your-google-form-link-here" target="_blank" rel="noopener">
-        RSVP Aquí
-      </a>
+      <p>Por favor confirma tu asistencia antes del 1 de agosto de 2025.</p>
+      <a class="rsvp-button" href="https://forms.gle/your-google-form-link-here" target="_blank" rel="noopener">RSVP Aquí</a>
     </div>
   </section>
 
@@ -111,58 +93,85 @@
     <div class="container">
       <h2>Cortejo</h2>
       <div class="party-grid">
-        <!-- Cortejo de la novia -->
+        <!-- Bride's Party Column -->
         <div class="party-column">
-          <h3>Damas de Honor</h3>
+          <h3>Bride's Party</h3>
           <div class="party-item">
-            <img src="https://source.unsplash.com/400x400?bridesmaid" alt="Maria Gonzalez" />
-            <p>Maria Gonzalez (Dama de Honor)</p>
+            <img src="images/damas/dani.jpeg" alt="Bridesmaid 1"/>
+            <p>Dani</p>
           </div>
           <div class="party-item">
-            <img src="https://source.unsplash.com/400x400?bridesmaid,portrait" alt="Elena Ruiz" />
-            <p>Elena Ruiz (Dama de Honor)</p>
+            <img src="images/damas/laia.jpeg" alt="Bridesmaid 2"/>
+            <p>Laia</p>
           </div>
           <div class="party-item">
-            <img src="https://source.unsplash.com/400x400?bridesmaid,portrait" alt="Carla Fernandez" />
-            <p>Carla Fernandez (Dama de Honor)</p>
+            <img src="images/damas/natalie.jpeg" alt="Bridesmaid 3"/>
+            <p>Natalie</p>
+          </div>
+          <div class="party-item">
+            <img src="images/damas/vero.jpeg" alt="Bridesmaid 4"/>
+            <p>Vero</p>
+          </div>
+          <div class="party-item">
+            <img src="images/damas/merche.jpeg" alt="Bridesmaid 5"/>
+            <p>Merche</p>
+          </div>
+          <div class="party-item">
+            <img src="images/damas/marina.jpeg" alt="Bridesmaid 6"/>
+            <p>Marina</p>
+          </div>
           </div>
         </div>
-        <!-- Cortejo del novio -->
+        <!-- Groom's Party Column -->
         <div class="party-column">
-          <h3>Padrinos</h3>
+          <h3>Groom's Party</h3>
           <div class="party-item">
-            <img src="https://source.unsplash.com/400x400?groomsman" alt="John Smith" />
-            <p>John Smith (Padrino)</p>
+            <img src="images/bestmen/zack.jpeg" alt="Groomsman 1"/>
+            <p>Zack</p>
           </div>
           <div class="party-item">
-            <img src="https://source.unsplash.com/400x400?groomsman,portrait" alt="Michael Lee" />
-            <p>Michael Lee (Padrino)</p>
+            <img src="images/bestmen/dimi.jpeg" alt="Groomsman 2"/>
+            <p>Dimi</p>
           </div>
           <div class="party-item">
-            <img src="https://source.unsplash.com/400x400?groomsman,portrait" alt="David Brown" />
-            <p>David Brown (Padrino)</p>
+            <img src="images/bestmen/jamie.jpg" alt="Groomsman 3"/>
+            <p>Jamie 3</p>
+          </div>
+          <div class="party-item">
+            <img src="images/bestmen/maxime.jpeg" alt="Groomsman 4"/>
+            <p>Maxime 4</p>
+          </div>
+          <div class="party-item">
+            <img src="images/bestmen/alba.jpeg" alt="Groomsman 5"/>
+            <p>Alba</p>
+          </div>
+          <div class="party-item">
+            <img src="images/bestmen/tim.jpeg" alt="Groomsman 6"/>
+            <p>Tim</p>
+          </div>
+          <div class="party-item">
+            <img src="images/bestmen/noah.jpeg" alt="Groomsman 7"/>
+            <p>Noah</p>
+          <div class="party-item">
+            <img src="images/bestmen/guille.jpeg" alt="Groomsman 7"/>
+            <p>Guille</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <div class="container">
       <p>&copy; Paula &amp; Austin, 2025</p>
     </div>
   </footer>
 
-  <!-- JavaScript to toggle nav -->
   <script>
     function toggleNav() {
       var x = document.getElementById("myTopnav");
-      if (x.className === "topnav") {
-        x.className += " responsive";
-      } else {
-        x.className = "topnav";
-      }
+      if (x.className === "topnav") { x.className += " responsive"; }
+      else { x.className = "topnav"; }
     }
   </script>
 </body>
