--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Paula &amp; Austin | Wedding</title>
-
-  <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400&display=swap"
-    rel="stylesheet"
-  />
-
-  <!-- Main CSS -->
-  <link rel="stylesheet" href="style.css" />
+    rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body id="top">
 
-  <!-- Header & Navbar -->
+  <!-- Top Navigation -->
   <div class="topnav" id="myTopnav">
-    <!-- Logo -->
     <a href="#top" class="logo">P &amp; A</a>
-    <!-- Nav links -->
     <a href="#location">Location</a>
     <a href="#schedule">Schedule</a>
     <a href="#transport">Transport</a>
@@ -28,9 +21,7 @@
     <a href="#faqs">FAQs</a>
     <a href="#rsvp">RSVP</a>
     <a href="#party">Wedding Party</a>
-    <!-- Language switch -->
     <div class="lang-switch"><a href="index_es.html">ES</a></div>
-    <!-- Hamburger icon -->
     <a href="javascript:void(0);" class="icon" onclick="toggleNav()">&#9776;</a>
   </div>
 
@@ -46,10 +37,11 @@
   <section id="location" class="section map">
     <div class="container">
       <h2>Location</h2>
-      <p>Join us at our beautiful venue in Barcelona.</p>
-      <div class="map-wrapper">
-        <img src="images/map-placeholder.png" alt="14th Century Map Placeholder" />
-      </div>
+      <p>Join us at our beautiful venue in Tielmes.</p>
+      <p>We'll be celebrating at the "Casa Rural Vega de Tielmes"</p>
+      <p>Calle de Cercado, 28550, Tielmes, Madrid</p>
+      <p>It's the first house to the left at the bottom of the hill. You won't be able to miss it.</p>
+      <p><a class="map-link" href="https://g.co/kgs/UA6YHBm" target="_blank" rel="noopener">Find it here on Google Maps</a></p>
     </div>
   </section>
 
@@ -57,7 +49,7 @@
   <section id="schedule" class="section">
     <div class="container">
       <h2>Schedule</h2>
-      <img src="images/schedule.png" alt="Wedding Schedule" class="schedule-img" />
+      <img src="images/schedule_en.png" alt="Wedding Schedule" class="schedule-img"/>
     </div>
   </section>
 
@@ -65,7 +57,7 @@
   <section id="transport" class="section">
     <div class="container">
       <h2>Getting To &amp; From</h2>
-      <p>We recommend taking taxis or ride-shares from the city center to the venue. There are shuttle buses departing from Park Güell at 4:00 PM. If driving, free parking is available on-site.</p>
+      <p>We recommend taking taxis or ride-shares from the city center to the venue. There are shuttle buses departing from Tielmes station at 4:00 PM. If driving, free parking is available on-site.</p>
     </div>
   </section>
 
@@ -74,9 +66,9 @@
     <div class="container">
       <h2>Where To Stay</h2>
       <ul>
-        <li><strong>Hotel Arts Barcelona:</strong> Luxury beachfront hotel, 3 km from venue.</li>
-        <li><strong>W Barcelona:</strong> Iconic sail-shaped hotel, 4 km from venue.</li>
-        <li><strong>Hotel 1898:</strong> Historic hotel on La Rambla, 5 km from venue.</li>
+        <li><strong>Hotel Rural Vega:</strong> Charming country inn adjacent to the venue.</li>
+        <li><strong>Posada La Venta:</strong> Historic inn in Tielmes center.</li>
+        <li><strong>Hostal Madrid:</strong> Affordable motel in the nearby town.</li>
       </ul>
       <p>Use code <em>PAULA-AUSTIN</em> for a 10% discount at any of these locations.</p>
     </div>
@@ -100,52 +92,84 @@
     <div class="container">
       <h2>RSVP</h2>
       <p>Please RSVP by August 1, 2025.</p>
-      <a class="rsvp-button" href="https://forms.gle/your-google-form-link-here" target="_blank" rel="noopener">
-        RSVP Here
-      </a>
+      <a class="rsvp-button" href="https://forms.gle/your-google-form-link-here" target="_blank" rel="noopener">RSVP Here</a>
     </div>
   </section>
 
+  
   <!-- Wedding Party Section -->
   <section id="party" class="section">
     <div class="container">
       <h2>Wedding Party</h2>
       <div class="party-grid">
-        <!-- Bride's Party -->
+        <!-- Bride's Party Column -->
         <div class="party-column">
           <h3>Bride's Party</h3>
           <div class="party-item">
-            <img src="https://source.unsplash.com/400x400?bridesmaid" alt="Maria Gonzalez" />
-            <p>Maria Gonzalez (Maid of Honor)</p>
+            <img src="images/damas/dani.jpeg" alt="Bridesmaid 1"/>
+            <p>Dani</p>
           </div>
           <div class="party-item">
-            <img src="https://source.unsplash.com/400x400?bridesmaid,portrait" alt="Elena Ruiz" />
-            <p>Elena Ruiz (Bridesmaid)</p>
+            <img src="images/damas/laia.jpeg" alt="Bridesmaid 2"/>
+            <p>Laia</p>
           </div>
           <div class="party-item">
-            <img src="https://source.unsplash.com/400x400?bridesmaid,portrait" alt="Carla Fernandez" />
-            <p>Carla Fernandez (Bridesmaid)</p>
+            <img src="images/damas/natalie.jpeg" alt="Bridesmaid 3"/>
+            <p>Natalie</p>
+          </div>
+          <div class="party-item">
+            <img src="images/damas/vero.jpeg" alt="Bridesmaid 4"/>
+            <p>Vero</p>
+          </div>
+          <div class="party-item">
+            <img src="images/damas/merche.jpeg" alt="Bridesmaid 5"/>
+            <p>Merche</p>
+          </div>
+          <div class="party-item">
+            <img src="images/damas/marina.jpeg" alt="Bridesmaid 6"/>
+            <p>Marina</p>
+          </div>
           </div>
         </div>
-        <!-- Groom's Party -->
+        <!-- Groom's Party Column -->
         <div class="party-column">
           <h3>Groom's Party</h3>
           <div class="party-item">
-            <img src="https://source.unsplash.com/400x400?groomsman" alt="John Smith" />
-            <p>John Smith (Best Man)</p>
+            <img src="images/bestmen/zack.jpeg" alt="Groomsman 1"/>
+            <p>Zack</p>
           </div>
           <div class="party-item">
-            <img src="https://source.unsplash.com/400x400?groomsman,portrait" alt="Michael Lee" />
-            <p>Michael Lee (Groomsman)</p>
+            <img src="images/bestmen/dimi.jpeg" alt="Groomsman 2"/>
+            <p>Dimi</p>
           </div>
           <div class="party-item">
-            <img src="https://source.unsplash.com/400x400?groomsman,portrait" alt="David Brown" />
-            <p>David Brown (Groomsman)</p>
+            <img src="images/bestmen/jamie.jpg" alt="Groomsman 3"/>
+            <p>Jamie 3</p>
+          </div>
+          <div class="party-item">
+            <img src="images/bestmen/maxime.jpeg" alt="Groomsman 4"/>
+            <p>Maxime 4</p>
+          </div>
+          <div class="party-item">
+            <img src="images/bestmen/alba.jpeg" alt="Groomsman 5"/>
+            <p>Alba</p>
+          </div>
+          <div class="party-item">
+            <img src="images/bestmen/tim.jpeg" alt="Groomsman 6"/>
+            <p>Tim</p>
+          </div>
+          <div class="party-item">
+            <img src="images/bestmen/noah.jpeg" alt="Groomsman 7"/>
+            <p>Noah</p>
+          <div class="party-item">
+            <img src="images/bestmen/guille.jpeg" alt="Groomsman 7"/>
+            <p>Guille</p>
           </div>
         </div>
       </div>
     </div>
   </section>
+
 
   <!-- Footer -->
   <footer>
@@ -154,15 +178,12 @@
     </div>
   </footer>
 
-  <!-- JavaScript to toggle the "responsive" class on the navigation -->
+  <!-- JavaScript for nav toggle -->
   <script>
     function toggleNav() {
       var x = document.getElementById("myTopnav");
-      if (x.className === "topnav") {
-        x.className += " responsive";
-      } else {
-        x.className = "topnav";
-      }
+      if (x.className === "topnav") { x.className += " responsive"; }
+      else { x.className = "topnav"; }
     }
   </script>
 </body>
